// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the tag selector on click 1`] = `
<div
  className="overview-meta-card overview-meta-tags"
>
  <button
    className="button-link"
    onClick={[Function]}
  >
    <TagsList
      allowUpdate={true}
      tags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </button>
</div>
`;

exports[`should open the tag selector on click 2`] = `
<div
  className="overview-meta-card overview-meta-tags"
>
  <button
    className="button-link"
    onClick={[Function]}
  >
    <TagsList
      allowUpdate={true}
      tags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </button>
  <div>
    <Connect(ProjectTagsSelectorContainer)
      position={
        Object {
          "right": 0,
          "top": 0,
        }
      }
      project="my-second-project"
      selectedTags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </div>
</div>
`;

exports[`should open the tag selector on click 3`] = `
<div
  className="overview-meta-card overview-meta-tags"
>
  <button
    className="button-link"
    onClick={[Function]}
  >
    <TagsList
      allowUpdate={true}
      tags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </button>
</div>
`;

exports[`should render with tags and admin rights 1`] = `
<div
  className="overview-meta-card overview-meta-tags"
>
  <button
    className="button-link"
    onClick={[Function]}
  >
    <TagsList
      allowUpdate={true}
      tags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </button>
</div>
`;

exports[`should render without tags and admin rights 1`] = `
<div
  className="overview-meta-card overview-meta-tags"
>
  <TagsList
    allowUpdate={false}
    tags={
      Array [
        "no_tags",
      ]
    }
  />
</div>
`;
